extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Consider_product_tax_codes__c.field-meta.xml
<CustomField>
    <fullName>Consider_product_tax_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates whether sending product tax code to the tax provider service or not. If it is set to true make sure every product has a tax code configured otherwise default product tax code will be used.</description>
    <inlineHelpText>This flag indicates whether sending product tax code to the tax provider service or not. If it is set to true make sure every product has a tax code configured otherwise default product tax code will be used.</inlineHelpText>
    <label>Consider product tax codes?</label>
    <type>Checkbox</type>
</CustomField>