extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>