extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>