extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Product_Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Product_Tax_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates whether there can be product(s) which are tax exempted</description>
    <label>Product Tax Exemption?</label>
    <type>Checkbox</type>
</CustomField>