extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Shipping_Items_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Items_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Items Taxable?</label>
    <type>Checkbox</type>
</CustomField>