extensions/tax/vertex/objects/Tax_Provider__mdt/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreateTransaction</fullName>
                <default>true</default>
                <label>Avalara - CreateTransaction</label>
            </value>
            <value>
                <fullName>AdjustTransaction</fullName>
                <label>Avalara - AdjustTransaction</label>
            </value>
            <value>
                <fullName>CommitTransaction</fullName>
                <label>Avalara - CommitTransaction</label>
            </value>
            <value>
                <fullName>RefundTransaction</fullName>
                <label>Avalara - RefundTransaction</label>
            </value>
            <value>
                <fullName>SALE</fullName>
                <label>Vertex - Sale</label>
            </value>
            <value>
                <fullName>Rental</fullName>
                <label>Vertex - Rental</label>
            </value>
            <value>
                <fullName>Lease</fullName>
                <label>Vertex - Lease</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>